change ipr local

--- a/Obsedian_test/Test/05-Jan-24.md
+++ b/Obsedian_test/Test/05-Jan-24.md
@@ -1,6 +1,5 @@
-### checking the new notes app [[system]]
-
-Obsedian and loqseq
-Logseq is better but may have problems with large numbers of notes and in future it will have any issues or not #test
+checking the new notes app [[system]]
+	Obsedian and loqseq
+	Logseq is better but may have problems with large numbers of notes and in future it will have any issues or not #test
 
 
