--- a/Obsedian_test/Test/2025-01-06.md
+++ b/Obsedian_test/Test/2025-01-06.md
@@ -1,7 +1,8 @@
-- tested the git things
-- changes done in mobile 
-- again changes done in ipr pc
-- mobile changes done 2:38
-- change in mobile 2:44
-- change in ipr pc 15:23
+- How to use the git for synchronization [[system]]
+	- tested the git things
+	- changes done in mobile 
+	- again changes done in ipr pc
+	- mobile changes done 2:38
+	- change in mobile 2:44
+	- change in ipr pc 15:23
 
