--- a/Obsedian_test/Test/2025-01-06.md
+++ b/Obsedian_test/Test/2025-01-06.md
@@ -6,4 +6,25 @@
 	- change in mobile 2:44
 	- change in ipr pc 15:23
 	- test
+- Work plan for next one year
+	- Repairing of 220A power supply 
+	- Operation and maintained of 1kA power supply
+	- Improvement of power supply controller for 220A Power supply
+	- EM analysis of Thruster magnets
+	- Preliminary design of current lead for thruster magnet
+	- Specification preparation and study for procurement of power supplies
+	- Procurement of Rack, Soldering iron and other lab related items.
+
+Proxy for ipr for applications [[IPR/sites]]
+	https://cc.ipr.res.in/bypass-proxy
+	set http_proxy=http://user:pass@10.20.1.222:3128
+	set https_proxy=http://user:pass@10.20.1.222:3128
+
+
+
+whats app marketing started today [[chem_bus]]
+	chandni sheet
+		upto 200 contacts message sent 
+	msg
+		
 
