change home local

--- a/Obsedian_test/Test/2025-01-07.md
+++ b/Obsedian_test/Test/2025-01-07.md
@@ -14,3 +14,7 @@ Shoes check in flipkart [[Home other/shoes purchase]]
 		[sm675](https://www.flipkart.com/sparx-sm-675-walking-shoes-men/p/itm9d1df819528d1?pid=SHOGJYDAWZXQMZVT&lid=LSTSHOGJYDAWZXQMZVT8YUGOD&marketplace=FLIPKART&q=sparx%20shoes&sattr[]=color&sattr[]=size&st=size)
 
 3T 
+
+issue for git sync 
+	how to consider only remote and resolve
+	`git reset --hard origin/main`
