change ipr local

--- a/Obsedian_test/Test/2025-01-06.md
+++ b/Obsedian_test/Test/2025-01-06.md
@@ -15,7 +15,7 @@
 	- Specification preparation and study for procurement of power supplies
 	- Procurement of Rack, Soldering iron and other lab related items.
 
-Proxy for ipr for applications [[IPR/sites]]
+Proxy for ipr for applications [[sites]]
 	https://cc.ipr.res.in/bypass-proxy
 	set http_proxy=http://user:pass@10.20.1.222:3128
 	set https_proxy=http://user:pass@10.20.1.222:3128
