change home local

--- a/Obsedian_test/Test/2025-01-08.md
+++ b/Obsedian_test/Test/2025-01-08.md
@@ -16,3 +16,12 @@ Comments of 3T warm bore cryostat and [[3T CL]]
 Gem pass
 	con13.ipr.gj
 	123@Iprmagnet
+
+Pass and other details
+	[APIFDF Analytics](https://www.apifdf.com/login)
+	sanivexhealthcare@gmail.com
+	123321
+
+Dilip bhai will go in dubai
+	arab health expo
+	
